# FluentUI2

./: .gitignore  CMakeLists.txt  README.md
FluentUI/: Button.qml  CheckBox.qml  ComboBox.qml  DelayButton.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  FluentUI_zh_CN.qm  Frame.qml  GroupBox.qml  HorizontalHeaderView.qml  Label.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  PageIndicator.qml  Pane.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RangeSlider.qml  ScrollBar.qml  SelectionRectangle.qml  Slider.qml  SpinBox.qml  SplitView.qml  StackView.qml  Switch.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolTip.qml  TreeViewDelegate.qml  Tumbler.qml  (+2 more)
FluentUI/Controls/: AccentColor.qml  Acrylic.qml  AppBar.qml  AutoLoader.qml  AutoSuggestBox.qml  BannerLayout.qml  Breadcrumb.qml  CalendarPicker.qml  Chart.qml  Chip.qml  ColorOverlay.qml  ColorPicker.qml  ColorResource.qml  Colors.qml  ContentPage.qml  ControlBackground.qml  CopyableText.qml  DataGrid.qml  DatePicker.qml  DropDownButton.qml  DropDownPopup.qml  Expander.qml  FastBlur.qml  FilledButton.qml  FlipLayout.qml  FluentIcons.qml  FocusItem.qml  FramelessWindow.qml  HighlightRectangle.qml  HotLoader.qml  HyperlinkButton.qml  Icon.qml  IconButton.qml  IconLabel.qml  InfoBadge.qml  InfoBar.qml  InfoBarManager.qml  InputBackground.qml  InputMenu.qml  LinearGradient.qml  (+51 more)
FluentUI/Controls/shaders/: lineargradient.vert.qsb  lineargradient_mask.frag.qsb  lineargradient_nomask.frag.qsb  radialgradient.vert.qsb  radialgradient_mask.frag.qsb  radialgradient_nomask.frag.qsb
FluentUI/designer/: fluentui.metainfo
FluentUI/impl/: plugins.qmltypes  qmldir
Gallery/: CMakeLists.txt  Gallery_en_US.ts  Gallery_zh_CN.qm  Gallery_zh_CN.ts  qtquickcontrols2.conf
Gallery/.cmake/: InstallerScript.iss.in  linux.desktop.in  linux_control.in  linux_postinst.in  linux_postrm.in  win_app.rc.in
Gallery/favicon/: favicon.icns
Gallery/res/qml/: App.qml
Gallery/res/qml/chart/: T_BarChart.qml  T_BubbleChart.qml  T_LineChart.qml  T_PieChart.qml  T_PolarAreaChart.qml  T_RadarChart.qml  T_ScatterChart.qml
Gallery/res/qml/component/: CardHighlight.qml
Gallery/res/qml/page/: T_About.qml  T_Acrylic.qml  T_AutoSuggestBox.qml  T_BannerLayout.qml  T_Breadcrumb.qml  T_CalendarPicker.qml  T_Checkbox.qml  T_Chip.qml  T_ColorPicker.qml  T_Colors.qml  T_ComboBox.qml  T_ContentDialog.qml  T_CopyableText.qml  T_DataGrid.qml  T_DatePicker.qml  T_DelayButton.qml  T_Dial.qml  T_Drawer.qml  T_DropDownButton.qml  T_Expander.qml  T_FileTreeData.qml  T_FilledButton.qml  T_FlipLayout.qml  T_Home.qml  T_HyperlinkButton.qml  T_IconButton.qml  T_IconLabel.qml  T_Icons.qml  T_InfoBadge.qml  T_InfoBar.qml  T_Marquee.qml  T_Material.qml  T_Menu.qml  T_MultiLineTextBox.qml  T_MultiSelectComboBox.qml  T_MultiWindow.qml  T_NavigationView.qml  T_NumberBox.qml  T_Pagination.qml  T_PasswordBox.qml  (+30 more)
Gallery/res/qml/screen/: LoginScreen.qml  MainScreen.qml  MultiWindowScreen.qml
Gallery/res/qml/window/: LoginWindow.qml  MainWindow.qml  PageWindow.qml  SingleInstanceWindow.qml  SingleTaskWindow.qml  StandardWindow.qml
Gallery/src/: AppInfo.cpp  AppInfo.h  CircularReveal.cpp  CircularReveal.h  DataGridController.cpp  DataGridController.h  FileTreeDataController.cpp  FileTreeDataController.h  Log.cpp  LoginViewModel.cpp  LoginViewModel.h  SettingsHelper.h  TreeDataGridController.cpp  TreeDataGridController.h  main.cpp
